--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,15 @@
     </form>
   </div>
 </nav>
+
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+    <label class="btn btn-primary active">
+      <input type="checkbox" autocomplete="off"> Active
+    </label>
+    <label class="btn btn-primary">
+      <input type="checkbox" autocomplete="off"> Check
+    </label>
+    <label class="btn btn-primary">
+      <input type="checkbox"  autocomplete="off"> Check
+    </label>
+  </div>
