--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,14 @@
     </form>
   </div>
 </nav>
-
+<br>
 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-    <label class="btn btn-primary active">
-      <input type="checkbox" autocomplete="off"> Active
-    </label>
+ 
     <label class="btn btn-primary">
-      <input type="checkbox" autocomplete="off"> Check
-    </label>
+      <input type="checkbox" autocomplete="off"> Twitter
+    </label><i class="fab fa-twitter"></i>
     <label class="btn btn-primary">
-      <input type="checkbox"  autocomplete="off"> Check
-    </label>
+      <input type="checkbox"  autocomplete="off"> Reddit
+    </label><i class="fab fa-reddit-alien"></i>
   </div>
+  <i class="fab fa-twitter"></i>
