--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Ticketmaster Social</a>
+  <img src="assets/ticketT.png" height="75px" width="41px" >
+  <a class="navbar-brand" style="margin-left: 77%" href="#">Ticketmaster Social</a>
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
     </ul>
