--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,12 @@
   </div>
 </nav>
 <br>
-<div class="btn-group btn-group-toggle" data-toggle="buttons">
+<div class="btn-group btn-group-toggle" data-toggle="buttons" style="padding-left: 10px">
  
     <label class="btn btn-primary">
-      <input type="checkbox" autocomplete="off"> Twitter
-    </label><i class="fab fa-twitter"></i>
+      <input type="checkbox" autocomplete="off"> Twitter&nbsp;<i class="fab fa-twitter"></i>
+    </label>
     <label class="btn btn-primary">
-      <input type="checkbox"  autocomplete="off"> Reddit
-    </label><i class="fab fa-reddit-alien"></i>
+      <input type="checkbox"  autocomplete="off"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
+    </label>
   </div>
-  <i class="fab fa-twitter"></i>
