added buttons for fees on sale web other

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <img src="assets/ticketT.png" height="75px" width="41px" >
   <a class="navbar-brand" style="margin-left: 77%" href="#">Ticketmaster Social</a>
@@ -11,12 +9,17 @@
   </div>
 </nav>
 <br>
-<div class="btn-group btn-group-toggle" data-toggle="buttons" style="padding-left: 10px">
- 
+<div class="btn-group btn-group-toggle" data-toggle="buttons" style="padding-left: 10px; position: relative; bottom: 60px">
     <label class="btn btn-primary">
       <input type="checkbox" autocomplete="off"> Twitter&nbsp;<i class="fab fa-twitter"></i>
     </label>
     <label class="btn btn-primary">
       <input type="checkbox"  autocomplete="off"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
     </label>
+</div>
+<div class="btn-group-vertical"  style="position: relative; top: 75px; right: 150px">
+    <button type="button" class="btn btn-primary">Fees</button>
+    <button type="button" class="btn btn-primary">On Sale</button>
+    <button type="button" class="btn btn-primary">Web Service</button>
+    <button type="button" class="btn btn-primary">Other</button>
   </div>
