--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
 <br>
 <div class="btn-group btn-group-toggle" data-toggle="buttons" style="padding-left: 10px; position: relative; bottom: 60px">
     <label class="btn btn-primary">
-      <input type="checkbox" autocomplete="off"> Twitter&nbsp;<i class="fab fa-twitter"></i>
+      <input type="checkbox" autocomplete="off" (click)="twitterView()"> Twitter&nbsp;<i class="fab fa-twitter"></i>
     </label>
     <label class="btn btn-primary">
-      <input type="checkbox"  autocomplete="off"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
+      <input type="checkbox"  autocomplete="off" (click)="redditView()"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
     </label>
 </div>
 <div class="btn-group-vertical"  style="position: relative; top: 75px; right: 150px">
