fixing merge conflicts

--- a/src/app/twitter/twitter.component.html
+++ b/src/app/twitter/twitter.component.html
@@ -1,9 +1,4 @@
-<p>twitter works!</p>
-<!DOCTYPE html>
-<meta charset="utf-8">
-
-<!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+<div id="my_dataviz" ></div>
+<div id="my_dataviz2" ></div>
