--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <img src="assets/ticketT.png" height="75px" width="41px" >
+  <img src="assets/ticketT.png" height="75px" width="41px">
   <a class="navbar-brand" style="margin-left: 77%" href="#">Ticketmaster Social</a>
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
@@ -9,20 +9,23 @@
   </div>
 </nav>
 <br>
-<div class="btn-group btn-group-toggle" data-toggle="buttons" style="padding-left: 10px; position: relative; bottom: 60px">
-    <label class="btn btn-primary">
-      <input type="checkbox" autocomplete="off" (click)="twitterView()"> Twitter&nbsp;<i class="fab fa-twitter"></i>
-    </label>
-    <label class="btn btn-primary">
-      <input type="checkbox"  autocomplete="off" (click)="redditView()"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
-    </label>
+<div class="btn-group btn-group-toggle" data-toggle="buttons"
+  style="padding-left: 30px; position: relative; bottom: 0px">
+  <label class="btn btn-primary">
+    <input type="checkbox" autocomplete="off" (click)="twitterView()"> Twitter&nbsp;<i class="fab fa-twitter"></i>
+  </label>
+  <label class="btn btn-primary">
+    <input type="checkbox" autocomplete="off" (click)="redditView()"> Reddit&nbsp;<i class="fab fa-reddit-alien"></i>
+  </label>
+  <label class="btn btn-primary">
+    <input type="checkbox" autocomplete="off" (click)="redditView()"> Facebook&nbsp;<i class="fab fa-facebook-f"></i>
+  </label>
 </div>
-<div class="btn-group-vertical"  style="position: relative; top: 75px; right: 150px">
-    <button type="button" class="btn btn-primary">Fees</button>
-    <button type="button" class="btn btn-primary">On Sale</button>
-    <button type="button" class="btn btn-primary">Web Service</button>
-    <button type="button" class="btn btn-primary">Other</button>
-  </div>
+
+<div style="
+display: flex;
+justify-content: flex-start;
+">
   <table class="table table-hover" style="width: 25%; position: relative; top: 80px; left: 10px">
     <thead>
       <tr>
@@ -33,9 +36,18 @@
     </thead>
     <tbody>
       <tr class="table-light" *ngFor="let tweet of influArray.slice(0, 5)">
-        <th scope="row">{{tweet.tweetName}}</th>
+        <th scope="row">
+          <pre>{{tweet.tweetName}}
+              Influence:{{tweet.tweetInflu}}</pre>
+        </th>
         <td>{{tweet.tweetText}}</td>
         <td>{{tweet.tweetDate}}}</td>
       </tr>
     </tbody>
-  </table> 
+  </table>
+  
+  <div>
+    <app-twitter [barData]="polarityArray">
+    </app-twitter>
+  </div>
+</div>
